[gd_scene load_steps=7 format=2]

[ext_resource path="res://asset/sprite2D/lab/Plugin.png" type="Texture" id=1]
[ext_resource path="res://object/plugin_khv/pluginKHV.gd" type="Script" id=2]
[ext_resource path="res://asset/sprite2D/lab/Socket.png" type="Texture" id=3]
[ext_resource path="res://asset/sprite2D/lab/ChanPlugin.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5, 60 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 27.75 )

[node name="PluginKHV" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2DSocket" type="Area2D" parent="."]
position = Vector2( 73, 99 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DSocket"]
position = Vector2( 41.5, 0 )
shape = SubResource( 2 )

[node name="SpriteSocket" type="Sprite" parent="Area2DSocket"]
position = Vector2( 41, 0 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 80, 0, 50, 120 )
region_filter_clip = true

[node name="Position2D" type="Position2D" parent="Area2DSocket"]
position = Vector2( 58, -37 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 7.0
default_color = Color( 0, 0, 0, 1 )

[node name="PositionStart" type="Position2D" parent="."]
position = Vector2( 359, 43 )

[node name="Area2DPlugin" type="Area2D" parent="."]
position = Vector2( 216, 43 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPlugin"]
position = Vector2( 0, 6.25 )
shape = SubResource( 1 )

[node name="ChanPlugin" type="Sprite" parent="Area2DPlugin"]
position = Vector2( -17, 18 )
texture = ExtResource( 4 )

[node name="SpritePlugin" type="Sprite" parent="Area2DPlugin"]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="Area2DPlugin"]
position = Vector2( 32, -7 )

[connection signal="area_entered" from="Area2DSocket" to="." method="_on_Area2DSocket_area_entered"]
[connection signal="area_exited" from="Area2DSocket" to="." method="_on_Area2DSocket_area_exited"]
[connection signal="input_event" from="Area2DPlugin" to="." method="_on_Area2D_input_event"]
